# smt-pretty

./: .travis.yml  README.md  smt-pretty.cabal  stack.yaml
app/: Main.hs
src/SMT/: Pretty.hs
src/SMT/Pretty/: Prelude.hs
