name:                smt-pretty
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/cocreature/smt-pretty#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           (C) 2017 Moritz Kiefer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/cocreature/smt-pretty#readme>

library
  hs-source-dirs:      src
  exposed-modules:     SMT.Pretty
                       SMT.Pretty.Prelude
  build-depends:       base >= 4.9 && < 5
                     , containers >= 0.5
                     , megaparsec >= 6.2
                     , prettyprinter >= 1.1
                     , protolude >= 0.2
                     , scientific >= 0.3
                     , text >= 1.2
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

executable smt-pretty
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , megaparsec
                     , optparse-applicative
                     , prettyprinter
                     , smt-pretty
                     , text
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

test-suite smt-pretty-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , smt-pretty
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cocreature/smt-pretty
